--- a/front3/package.json
+++ b/front3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front",
+  "name": "front3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,9 +15,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "proxy": "http://localhost:3000"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
